2009-01-03  Peter Bloomfield

	* libbalsa/gmime-gpgme-context.c: (g_mime_gpgme_encrypt):
	clarify string--leonardof gnome org.

2009-01-02  Albrecht Dreß

	* configure.in: prefer gio >= 2.16.0, fallback to gnome-vfs.
	* libbalsa/gmime-stream-gnome-vfs.[hc]: build only if using gnome-vfs 
	* libbalsa/files.[hc]: implement icon lookup for gio
	* libbalsa/libbalsa-vfs.[hc]:  add support for GIO
	* libbalsa/gmime-stream-gio.[hc]: gmime gio stream wrapper.
	* libbalsa/misc.c: remove unnecessary #include of gnome-vfs.h
	* libbalsa/Makefile.am: add gmime-stream-gio.[hc]

	* src/balsa-print-object-default.c: use libbalsa-vfs instead of
	gnome-vfs, enabling in this way a clean GIO usage.
	
	* src/sendmsg-window.c: call external editor through gio or gnome-vfs;
	use libbalsa-vfs helper to open attachment with external app;
	show description in attachment list
	* src/balsa-mime-widget-callbacks.[ch]: use libbalsa-vfs to open parts
	* src/balsa-mime-widget-text.c: use changed balsa-mime-widget-callbacks API.
	* src/ab-window.c: launch app using glib
	* src/balsa-message.c: use description instead of plain MIME type.
	* src/balsa-mime-widget.c: create a mime button via libbalsa-vfs.
	
2009-01-02  Paweł Sałek

	* src/main-window.c: report number of deleted message duplicates.
	* libbalsa/mailbox.[ch]: provide it.
	* libbalsa/imap-server.c: using binary fetches breaks integrity checks.

2008-12-30  Paweł Sałek

	* NEWS, configure.in: release 2.3.27

2008-12-30  Paweł Sałek

	* libbalsa/imap/imap_search.c: keep ImapHandle locked when searching.
	* libbalsa/imap/imap-handle.c: .. and when switching to IDLE mode.
	* libbalsa/imap/imap-commands.c: and when threading and sorting.

2008-12-27  Paweł Sałek and Peter Bloomfield

	* src/balsa-mime-widget-message.c: call balsa_message_save_part()
	from header context menu.
	* src/balsa-message.[ch]: implement balsa_message_save_part().
	Call it from the "Message parts" tab.